# AgenticFilmPipeline

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: models.yaml  pipeline.yaml  settings.py
data/: sample_script.txt
scripts/: run.ps1
src/agents/: animation_agent.py  base.py  character_agent.py  lipsync_agent.py  quality_agent.py  render_agent.py  script_agent.py  storyboard_agent.py  voice_agent.py
src/models/: humanizer.py  model_registry.py  schemas.py
src/readers/: ruthambhara_reader.py
src/supervisor/: __init__.py  orchestrator.py
src/utils/: logger.py
src/web/: server.py
tests/: test_pipeline.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/pages/: index.tsx
web/styles/: globals.css
