[project]
name = "agentic-film-pipeline"
version = "2.0.0"
description = "RUTHAMBHARA — Agentic Film Pipeline for AI-powered film production"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "black", "ruff"]
